<resources>
    <string name="app_name">MyChat</string>
    <string name="select_user">Select User</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="login_to_continue">LOGIN TO CONTINUE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Sign_in">SIGN IN</string>
    <string name="craete_new_acc">CREATE NEW ACCOUNT</string>
    <string name="add_image">Add Image</string>
    <string name="user_name">User Name</string>
    <string name="re_password">Re-Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Already_have_an_Account">Already have an Account ?</string>
    <string name="login">Login</string>
    <string name="welcome">WELCOME</string>
    <string name="my_chat">My Chat</string>
    <string name="upload_avatar">UPLOAD YOUR AVATAR</string>
    <string name="upload">Upload</string>
    <string name="skip">Want to skip this Time?</string>
    <string name="skip2">Skip</string>
    <string name="conversations">MESSAGES</string>
    <string name="new_group">New Group</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="my_profile">My Profile</string>
    <string name="title">About</string>
    <string name="app_version">v1.0.0</string>
    <string name="app_description">Introducing MyChat: Our Android Chat Application is a user-friendly
        messaging platform that allows you to connect and chat with your friends and family effortlessly.
        With its intuitive interface, you can easily manage your contacts, initiate chat conversations,
        and stay connected on the go. What sets our app apart is the integration of Chat GPT,
        an advanced AI-powered chatbot that enhances your conversations with intelligent responses
        and interactive engagement.
        Experience seamless messaging, media sharing, and personalized features while
        enjoying the convenience of built-in Chat GPT support.
        Stay connected,
        express yourself, and explore a new level of communication with our Android Chat Application.  </string>
    <string name="devloped_by">Devloped By</string>
    <string name="devloper_name">Shiva Verma</string>
    <string name="user_id">User Id</string>
    <string name="user_profile">User Profile</string>
    <string name="about">About</string>
    <string name="typer">TYPER</string>
    <string name="last_msg">last message</string>
    <string name="channel_description">For Notifications</string>
    <string name="online">online</string>
    <string name="last_seen">Last seen</string>
    <string name="user_pressence">User Pressence</string>
    <string name="chatgpt">chatgpt</string>
    <string name="welcome_chatgpt">Welcome to MyChat\nchat with your GPT now</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_mychat">Welcome To MyChat</string>
    <string name="by_shiva_verma">BY SHIVA VERMA</string>
</resources>