<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".avatar_uploader">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/upload_avatar"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/layoutimage"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/blue"
                android:textSize="@dimen/_20sdp" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_avatar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:textSize="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:fadingEdge="vertical"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/skip"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:textSize="@dimen/_12sdp"
            android:text="@string/skip2"
            android:textColor="@color/primary"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>