<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:id="@+id/scroll_view"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/craete_new_acc"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/ripple">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/layoutimage"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

        </FrameLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:background="@drawable/background_input"
            android:textColorHint="@color/primary_text"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:textColorHint="@color/primary_text"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:textColorHint="@color/primary_text"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/repass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:textColorHint="@color/primary_text"
            android:hint="@string/re_password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_procced"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/ripple"
            android:fontFamily="@font/arkhip_font"
            android:textSize="@dimen/_13sdp"
            android:fadingEdge="vertical"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <RelativeLayout
            android:id="@+id/progress_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:padding="10dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_gravity="center"
            android:background="@drawable/white_circle"
            android:elevation="8dp">
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="visible"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/black"
                android:layout_gravity="center" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/ripple"
            android:text="@string/Already_have_an_Account"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginAccount"
            android:layout_width="wrap_content"
            android:background="@drawable/ripple"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/login"
            android:textColor="@color/primary"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>