<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_btn_intro1"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_intro1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:textColorHint="@color/primary_text"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/pass_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:textColorHint="@color/primary_text"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_proceed"
            android:layout_width="match_parent"
            android:background="@drawable/background_input"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fadingEdge="vertical"
            android:text="@string/Sign_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/craete_new_acc"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/twitter_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/twitter" />

            <ImageView
                android:id="@+id/google_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/google" />

            <ImageView
                android:id="@+id/facebook_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/facebook" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>