<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_intro"
    tools:context=".user_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_content_bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_toolbar">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_btn_intro1"
                android:padding="6dp"
                android:src="@drawable/back"
                android:tint="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/user_profile"
                android:layout_marginStart="@dimen/_25sdp"
                android:textColor="@color/primary_text2"
                android:fontFamily="@font/arkhip_font"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/layoutimage"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

        </FrameLayout>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:hint="@string/user_name"
            android:fontFamily="@font/arkhip_font"
            android:textAlignment="center"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:hint="@string/user_id"
            android:fontFamily="@font/arkhip_font"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>