<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    tools:context=".userConversation">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/chat_options"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/ripple2"
        android:scaleType="centerCrop"
        android:src="@drawable/menu_button_vec"
        android:tint="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_8sdp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:id="@+id/logout"
        android:src="@drawable/logout_vec"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/ripple2"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_31sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/dashboard"
        android:fontFamily="@font/beckmanfont1"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/chat_options"
        app:layout_constraintEnd_toStartOf="@+id/logout"
        app:layout_constraintStart_toEndOf="@+id/chat_options"
        app:layout_constraintTop_toTopOf="@+id/chat_options"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_options">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_conversationRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_18sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        <RelativeLayout
            android:id="@+id/progress_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@drawable/white_circle"
            android:elevation="8dp">
            <ProgressBar
                android:id="@+id/prgressBar"
                android:visibility="visible"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center" />
        </RelativeLayout>

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_mychat"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:fontFamily="@font/beckmanfree2"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:visibility="invisible" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNewChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_250sdp"
            android:src="@drawable/add"
            android:background="@drawable/ripple2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="bottom"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
